--- a/app/src/main/res/layout/activity_company_job_listing.xml
+++ b/app/src/main/res/layout/activity_company_job_listing.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".company.CompanyJobListing"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/tv_jobListTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="My Internships"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:textColor="@color/blue"
+            android:paddingBottom="5dp"
+            android:textStyle="bold"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_addInternship"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:text="Add Internship"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/blue"
+            app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_jobListing"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_addInternship"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:paddingTop="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+    android:id="@+id/nav_companySideMenu"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    tools:context=".company.CompanyJobListing"
-    android:padding="20dp">
-
-    <TextView
-        android:id="@+id/tv_jobListTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="My Internships"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textSize="24sp"
-        android:gravity="center"
-        android:textColor="@color/blue"
-        android:paddingBottom="5dp"
-        android:textStyle="bold"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_addInternship"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:text="Add Internship"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/blue"
-        app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_jobListing"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_addInternship"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="20dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_gravity="start"
+    app:menu="@menu/nav_company_menu"
+    android:fitsSystemWindows="true"/>
+</androidx.drawerlayout.widget.DrawerLayout>
