--- a/app/src/main/res/layout/activity_company_view_applicant_information.xml
+++ b/app/src/main/res/layout/activity_company_view_applicant_information.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -143,3 +149,12 @@
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+    android:id="@+id/nav_companySideMenu"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    app:menu="@menu/nav_company_menu"
+    android:fitsSystemWindows="true"/>
+</androidx.drawerlayout.widget.DrawerLayout>
